@@ -111,6 +111,8 @@ enum {
 	SP_ATTR_DY,
 	SP_ATTR_ROTATE,
 	SP_ATTR_SODIPODI_ROLE,
+	/* SPText */
+	SP_ATTR_SODIPODI_LINESPACING,
 	/* SPStop */
 	SP_ATTR_OFFSET,
 	/* SPGradient */
