@@ -1,3 +1,14 @@
+2003-06-28  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/dialogs/text-edit.c (sp_text_edit_dialog): Added line spacing combo
+	(sp_text_edit_dialog_update_object): Update line spacing
+	(sp_text_edit_dialog_read_selection): Update control
+
+	* src/sp-text.c (sp_text_set): Parse "sodipodi:linespacing"
+	(sp_text_set_shape): Use line spacing
+
+	* src/attributes.c: Added "sodipodi:linespacing"
+
 2003-06-27  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/dialogs/desktop-properties.c (sp_dtw_border_layer_toggled): New callback
